fix(styles): atkinson was too low

--- a/sass/overrides.scss
+++ b/sass/overrides.scss
@@ -80,7 +80,7 @@ details > summary + * {
 }
 
 body {
-	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI Variable Text', "Segoe UI", 'Atkinson Hyperlegible', Roboto, Helvetica, 'Helvetica Neue', "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", Arial, system-ui, sans-serif, "Apple Color Emoji", "Twemoji Mozilla", "Segoe UI Emoji", "Android Emoji";
+	font-family: -apple-system, BlinkMacSystemFont, 'Atkinson Hyperlegible', 'Segoe UI Variable Text', "Segoe UI", Roboto, Helvetica, 'Helvetica Neue', "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", Arial, system-ui, sans-serif, "Apple Color Emoji", "Twemoji Mozilla", "Segoe UI Emoji", "Android Emoji";
 	font-weight: 400;
 	& .content article {
 		font-family: 'Atkinson Hyperlegible', Roboto, Helvetica, 'Helvetica Neue', "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", Arial, sans-serif, "Apple Color Emoji", "Twemoji Mozilla", "Segoe UI Emoji", "Android Emoji";
